--- a/public/ajax_tests/test.html
+++ b/public/ajax_tests/test.html
@@ -12,6 +12,7 @@
 	<button id="user_logout" type="button">User Logout</button>
 	
 	<button id="cities_index" type="button">Cities index</button>
+	<button id="cities_rates" type="button">Cities rates</button>
 	<h1 id="result">result</h1>
 </body>
 </html>
