fixed json location links for create

--- a/public/ajax_tests/test.html
+++ b/public/ajax_tests/test.html
@@ -13,6 +13,10 @@
 	
 	<button id="cities_index" type="button">Cities index</button>
 	<button id="cities_rates" type="button">Cities rates</button>
+	
+	<button id="add_car" type="button">Add car</button>
+	<button id="get_cars" type="button">Get cars</button>
+	
 	<h1 id="result">result</h1>
 </body>
 </html>
