--- a/public/401.html
+++ b/public/401.html
@@ -9,9 +9,9 @@
 
     <body>
         <div class="hero-unit center">
-            <h1>User Unauthorized <small><font face="Tahoma" color="red">Error 404</font></small></h1>
+            <h1>User Unauthorized <small><font face="Tahoma" color="red">Error 401</font></small></h1>
             <br />
-            <p>You are not authorized to access this page <b>Back</b> button to navigate to the page you have prevously come from</p>
+            <p>You are not authorized to access this page <b>Back</b> button to navigate to the page you have previously come from</p>
             <p><b>Or you could just press this neat little button:</b></p>
             <a href="#" class="btn btn-large btn-info"><i class="icon-home icon-white"></i> Take Me Home</a>
         </div>
