--- a/public/ajax_tests/test.html
+++ b/public/ajax_tests/test.html
@@ -16,6 +16,8 @@
 	
 	<button id="add_car" type="button">Add car</button>
 	<button id="get_cars" type="button">Get cars</button>
+
+    <button id="add_payment" type="button">Add payment</button>
 	
 	<h1 id="result">result</h1>
 </body>
