--- a/public/ajax_tests/test.html
+++ b/public/ajax_tests/test.html
@@ -18,6 +18,7 @@
 	<button id="get_cars" type="button">Get cars</button>
 
     <button id="add_payment" type="button">Add payment</button>
+    <button id="get_charge" type="button">Get Charge</button>
 	
 	<h1 id="result">result</h1>
 </body>
