--- a/public/ajax_tests/test.html
+++ b/public/ajax_tests/test.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Tests</title>
 	<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
+	<script src="serverApi.js"></script>
 	<script src="tests.js"></script>	
 </head>
 <body>
@@ -19,6 +20,8 @@
 
     <button id="add_payment" type="button">Add payment</button>
     <button id="get_charge" type="button">Get Charge</button>
+	
+	<button id="get_area_by_street" type="button">Get area by street</button>
 	
 	<h1 id="result">result</h1>
 </body>
