get_free_spots test

--- a/public/ajax_tests/test.html
+++ b/public/ajax_tests/test.html
@@ -22,6 +22,8 @@
     <button id="get_charge" type="button">Get Charge</button>
 	
 	<button id="get_area_by_street" type="button">Get area by street</button>
+
+    <button id="get_free_spot" type="button">Get free parking spots</button>
 	
 	<h1 id="result">result</h1>
 </body>
